src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwU-dhU-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: U\ndefault window height: U\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 0 × 688, bounds: 1239 × 688, states: []
size: 1 × 688, bounds: 1239 × 688, states: [Activated]
